objects/Root_Case__c.object
<CustomObject>
    <fields>
        <fullName>Microsoft_Trust_Bits__c</fullName>
        <label>Microsoft Trust Bits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Server Authentication</fullName>
                </value>
                <value>
                    <fullName>Client Authentication</fullName>
                </value>
                <value>
                    <fullName>Code Signing</fullName>
                </value>
                <value>
                    <fullName>Document Signing</fullName>
                </value>
                <value>
                    <fullName>Encrypting File System</fullName>
                </value>
                <value>
                    <fullName>IP Security End System</fullName>
                </value>
                <value>
                    <fullName>IP Security IKE Intermediate</fullName>
                </value>
                <value>
                    <fullName>IP Security Tunnel Termination</fullName>
                </value>
                <value>
                    <fullName>IP Security User</fullName>
                </value>
                <value>
                    <fullName>OCSP Signing</fullName>
                </value>
                <value>
                    <fullName>Private Key Archival</fullName>
                </value>
                <value>
                    <fullName>Secure Email</fullName>
                </value>
                <value>
                    <fullName>Time Stamping</fullName>
                </value>
                <value>
                    <fullName>Code Signing Signing</fullName>
                    <isActive>false</isActive>
                    <label>Code Signing Signing</label>
                </value>
                <value>
                    <fullName>Secure Secure Email</fullName>
                    <isActive>false</isActive>
                    <label>Secure Secure Email</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mozilla_Applied_Constraints_Verified__c</fullName>
        <label>DELETE Mozilla Applied Cons (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mozilla_Applied_Constraints__c</fullName>
        <defaultValue>&quot;NEED: Mozilla has the ability to name constrain root certs; e.g. to *.gov or *.mil. CAs should consider if such constraints may be applied to their root certs.&quot; &amp; BR() &amp;
&quot;https://dxr.mozilla.org/mozilla-central/source/security/nss/lib/certdb/genname.c#1551&quot;</defaultValue>
        <label>Mozilla Applied Constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mozilla_Fields_Verified__c</fullName>
        <label>Mozilla Fields Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mozilla_Removal_Bug_No_or_Date__c</fullName>
        <label>Mozilla Removal Bug No. or Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mozilla_Status__c</fullName>
        <label>Mozilla Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Included</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Factor_Authentication_Verified__c</fullName>
        <label>DELETE Multi-Factor Auth (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Factor_Authentication__c</fullName>
        <defaultValue>&quot;NEED section number of the CP/CPS that states that multi-factor authentication is enforced for all accounts capable of directly causing certificate issuance. (reference section 6.5 of the BRs)&quot;</defaultValue>
        <label>DELETE Multi-Factor Authentication</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSS_Release_When_First_Included__c</fullName>
        <label>NSS Release When First Included</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Security_Verified__c</fullName>
        <label>DELETE Network Security (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Security__c</fullName>
        <defaultValue>&quot;NEED section number(s) of the CP/CPS dealing with Network Security.&quot;</defaultValue>
        <label>DELETE Network Security</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCSP_URL_Verified__c</fullName>
        <label>DELETE OCSP URL (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCSP_URL_s__c</fullName>
        <defaultValue>&quot;NEED OCSP URL and maximum OCSP expiration time, with reference to where this is documented in the CP/CPS&quot;</defaultValue>
        <inlineHelpText>OCSP is required for the SSL trust bit to be enabled. Provide the OCSP URL that is in the AIA of your subscriber certificates.</inlineHelpText>
        <label>DELETE OCSP URL(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OU_From_Issuer_Field__c</fullName>
        <description>Organizational Unit</description>
        <inlineHelpText>Organizational Unit</inlineHelpText>
        <label>OU From Issuer Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OU_From_Subject_Field__c</fullName>
        <label>OU From Subject Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OU_from_Issuer_Field_Verified__c</fullName>
        <label>Delete: OU from Issuer Field (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_From_Issuer_Field_Verified__c</fullName>
        <label>Delete: O From Issuer Field (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_From_Issuer_Field__c</fullName>
        <inlineHelpText>The Organization Name and CN in the Issuer must have sufficient information about the CA Organization.</inlineHelpText>
        <label>O From Issuer Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>O_From_Subject_Field__c</fullName>
        <label>O From Subject Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Org_Verification_Procedure_Verified__c</fullName>
        <label>DELETE Org Verifi Procedure (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_Verification_Procedures__c</fullName>
        <defaultValue>&quot;NEED: CP/CPS sections that describe identity and organization verification procedures for cert issuance.&quot;</defaultValue>
        <label>DELETE Org Verification Procedures</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Relevant_Documents_Verified__c</fullName>
        <label>DELETE Other Relevant Docs (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Relevant_Documents__c</fullName>
        <label>DELETE Other Relevant Documents</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PKI_Hierarchy_Verified__c</fullName>
        <label>PKI Hierarchy Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Documentation_Verified__c</fullName>
        <label>DELETE Policy Documentation (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Documentation__c</fullName>
        <defaultValue>&quot;NEED: Languages that the CP/CPS and other documents are provided in.&quot;</defaultValue>
        <label>DELETE Policy Documentation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publ_Discl_Audited_subCAs_Verified__c</fullName>
        <description>Link to Publicly Disclosed and Audited subordinate CA Certificates (Verified?)</description>
        <label>Delete: Publ Discl &amp; Audited (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Key_Algorithm__c</fullName>
        <label>Public Key Algorithm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RSA 1024 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2045 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2046 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2047 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 2048 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 3072 bits</fullName>
                </value>
                <value>
                    <fullName>RSA 4096 bits</fullName>
                </value>
                <value>
                    <fullName>EC secp256r</fullName>
                </value>
                <value>
                    <fullName>EC secp256r1</fullName>
                </value>
                <value>
                    <fullName>EC secp384r1</fullName>
                </value>
                <value>
                    <fullName>EC secp512r1</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publicly_Disclosed_and_Audited_subCAs__c</fullName>
        <defaultValue>&quot;NEED URL to publicly disclosed subordinate CA certificates that chain up to certificates in Mozilla&apos;s CA program, as per Items #8, 9, and 10 of Mozilla&apos;s CA Certificate Inclusion Policy.&quot;</defaultValue>
        <description>Link to Publicly Disclosed and Audited subordinate CA Certificates</description>
        <inlineHelpText>Link to Publicly Disclosed and Audited subordinate CA Certificates</inlineHelpText>
        <label>DELETE Publicly Disclosed &amp; Aud subCAs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Request Received</fullName>
                    <default>true</default>
                    <label>Initial Request Received</label>
                </value>
                <value>
                    <fullName>Information Verification In Process</fullName>
                </value>
                <value>
                    <fullName>In Detailed CP/CPS Review</fullName>
                </value>
                <value>
                    <fullName>In Public Discussion</fullName>
                </value>
                <value>
                    <fullName>Discussion on Hold</fullName>
                </value>
                <value>
                    <fullName>CA Action Items from Discussion</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved, Pending Inclusion</fullName>
                </value>
                <value>
                    <fullName>Approved, Pending Inclusion and EV</fullName>
                </value>
                <value>
                    <fullName>Included, Pending EV</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Request Withdrawn by CA</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Closed - CA Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revocation_Tested_Verified__c</fullName>
        <label>DELETE Revocation Tested (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revocation_Tested__c</fullName>
        <defaultValue>&quot;NEED: Test with http://certificate.revocationcheck.com/ make sure there aren&apos;t any errors.&quot;</defaultValue>
        <inlineHelpText>Browse to http://certificate.revocationcheck.com/ and enter the Test Website URL. Make sure there are no errors listed in the output.</inlineHelpText>
        <label>Revocation Tested</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Explain the unique function of this root, especially if requesting inclusion of multiple roots.&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>If requesting inclusion of multiple roots, explain unique function of this root.</inlineHelpText>
        <label>Role</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit record ID for Root Case</inlineHelpText>
        <label>Root Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Download_URL_Verified__c</fullName>
        <label>DELETE Root Cert DownloadURL (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Certificate_Download_URL__c</fullName>
        <defaultValue>&quot;NEED: A public URL through which the CA certificate can be directly downloaded.&quot;</defaultValue>
        <label>Root Certificate Download URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name_Existing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Previously called Included Certificate Name</description>
        <inlineHelpText>The Root Certificate that this Root Case applies to.</inlineHelpText>
        <label>Certificate Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Root</value>
            </filterItems>
            <filterItems>
                <field>Account.Parent.Id</field>
                <operation>equals</operation>
                <valueField>$Source.CA_Owner_Name_Existing__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Root Cases (Included Certificate)</relationshipLabel>
        <relationshipName>Root_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name__c</fullName>
        <label>Root Certificate Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Stores_Applying_To__c</fullName>
        <label>Root Stores Applying To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Mozilla</fullName>
                    <default>true</default>
                    <label>Mozilla</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Stores_Included_In_Verified__c</fullName>
        <label>DELETE Root Stores Incl In (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Stores_Included_In__c</fullName>
        <label>DELETE Root Stores Included In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Mozilla</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint_Verified__c</fullName>
        <label>Delete: SHA-1 Fingerprint (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint__c</fullName>
        <label>SHA-1 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_1__c</fullName>
        <formula>IF (SHA_1_Fingerprint__c &lt;&gt; null, LEFT(SHA_1_Fingerprint__c, 11) + &quot;...&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHA_256_Fingerprint_Verified__c</fullName>
        <label>Delete: SHA-256 Fingerprint (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SHA_256_Fingerprint__c</fullName>
        <label>SHA-256 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_256__c</fullName>
        <formula>IF (SHA_256_Fingerprint__c &lt;&gt; null, LEFT(SHA_256_Fingerprint__c, 11) + &quot;...&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-256</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPKI_SHA256__c</fullName>
        <inlineHelpText>Identifies similar logical certificates in different CA Hierarchies. SHA256(der(spki))</inlineHelpText>
        <label>SPKI SHA256</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSL_Validation_Type_Verified__c</fullName>
        <label>DELETE SSL Validation Type (Verified?)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Response From CA</fullName>
                    <default>true</default>
                    <label>Need Response From CA</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Need Clarification From CA</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSL_Validation_Type__c</fullName>
        <label>SSL Validation Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DV</fullName>
                </value>
                <value>
                    <fullName>OV</fullName>
                </value>
                <value>
                    <fullName>EV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>